--- a/app/views/impasse_custom_fields/edit.html.erb
+++ b/app/views/impasse_custom_fields/edit.html.erb
@@ -4,17 +4,8 @@
   &#187; <%= h @custom_field.name %>
 </h2>
 
-<% if Rails::VERSION::MAJOR < 3 %>
-  <% labelled_form_for :custom_field, @custom_field, { :action => :edit, :id => @custom_field } do |f| %>
-    <%= render :partial => "custom_fields/form", :locals => {:f => f} %>
+<%= labelled_form_for @custom_field, :as => :custom_field, :url => { :action => :edit, :id => @custom_field }  do |f| %>
+  <%= render :partial => "custom_fields/form", :locals => {:f => f} %>
   <%= hidden_field_tag 'type', @custom_field.type %>
-    <%= submit_tag l(:button_save) %>
-  <% end %>
-<% else %>
-  <% output = labelled_form_for @custom_field, :as => :custom_field, :url => { :action => :edit, :id => @custom_field }  do |f| %>
-    <%= render :partial => "custom_fields/form", :locals => {:f => f} %>
-    <%= hidden_field_tag 'type', @custom_field.type %>
-    <%= submit_tag l(:button_save) %>
-  <% end %>
-  <%= output %>
+  <%= submit_tag l(:button_save) %>
 <% end %>
