--- a/app/views/impasse_custom_fields/new.html.erb
+++ b/app/views/impasse_custom_fields/new.html.erb
@@ -2,17 +2,8 @@
   &#187; <%= link_to l(@custom_field.type_name), :controller => 'impasse_custom_fields', :action => 'index', :tab => @custom_field.class.name %>
   &#187; <%= l(:label_custom_field_new) %></h2>
 
-<% if Rails::VERSION::MAJOR < 3 %>
-  <% labelled_form_for :custom_field, @custom_field, {} do |f| %>
-    <%= render :partial => "custom_fields/form", :locals => {:f => f} %>
+<%= labelled_form_for @custom_field, :as => :custom_field, :url => { :action => :new }  do |f| %>
+  <%= render :partial => "custom_fields/form", :locals => {:f => f} %>
   <%= hidden_field_tag 'type', @custom_field.type %>
-    <%= submit_tag l(:button_create) %>
-  <% end %>
-<% else %>
-  <% output = labelled_form_for @custom_field, :as => :custom_field, :url => { :action => :new }  do |f| %>
-    <%= render :partial => "custom_fields/form", :locals => {:f => f} %>
-    <%= hidden_field_tag 'type', @custom_field.type %>
-    <%= submit_tag l(:button_create) %>
-  <% end %>
-  <%= output %>
+  <%= submit_tag l(:button_create) %>
 <% end %>
