--- a/app/views/impasse_hooks/_requirement_cases.html.erb
+++ b/app/views/impasse_hooks/_requirement_cases.html.erb
@@ -13,7 +13,7 @@
             link_to("#{test_case.id} - #{test_case.node.name}", {
                   :controller => :impasse_test_case,
                   :action => :index,
-                  :project_id => context[:project],
+                  :project_id => test_case.project,
                   :anchor => "test_case-#{test_case.id}"
                 })
             %>
