add include jquery.cookie.js to executions view

--- a/app/views/impasse_executions/index.html.erb
+++ b/app/views/impasse_executions/index.html.erb
@@ -4,6 +4,7 @@
            'jquery-ui',
            'jquery.hotkeys.js',
            'jquery.jstree.js',
+           'jquery.cookie.js',
            'jquery.blockUI.js',
            'jquery.noty.js',
            'impasse_util',
